# sniproxy

./: .gitignore  .mailmap  Cargo.toml  Containerfile  README.md  go.mod  log.go  main.go  proxy.go  proxy_protocol.go  sni.go  sni_test.go
.github/: dependabot.yaml
.github/workflows/: build_container.yaml  ci.yaml  daily_change_check.yaml
cmd/sniproxy/: main.go
config/: config.go  lexer.go  parser.go
internal/config/: config.go  lexer.go  parser.go
internal/lexer/: lexer.go  parser.go
internal/log/: log.go
internal/sniproxy/: config.go  http.go  log.go  proxy.go  proxy_protocol.go  sni.go  sni_test.go
src/: config.rs  context.rs  http.rs  logger.rs  main.rs  proxy_protocol.rs  reader.rs  tls.rs  zc.rs
src/tcp/: http.rs  mod.rs  socket.rs  tcp.rs  tls.rs
test_data/: example.net.crt  example.net.key
