[package]
name = "sniproxy"
license = "GPL-2.0+"
authors = ["Antoine Tenart <antoine.tenart@ack.tf>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ipnet = { version = "2.11", features = ["serde"] }
libc = "0.2"
log = { version = "0.4", features = ["std"] }
once_cell = "1.21"
regex = "1.11"
serde = "1.0"
serde_yaml = "0.9"
socket2 = "0.6"
termcolor = "1.3"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }
